[package]
name = "probly-search-demo"
description = "A Github pages wasm demo"
version = "0.1.13"
authors = ["marcus-pousette <marcus.pousette@quantleaf.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
probly-search = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.61"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.6"